// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dehydrate > dehydrate 'string' undefined 1`] = `
[
  "Flatpack JSON v1",
  "string",
]
`;

exports[`dehydrate > dehydrate /[\\p{L}\\p{M}]+/gu undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    6,
    2,
    3,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
]
`;

exports[`dehydrate > dehydrate [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    3,
    2,
    3,
    2,
    4,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    5,
  ],
  [
    6,
    3,
    4,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
  [
    6,
    6,
    4,
  ],
  "[\\p{Lu}\\p{M}]+",
]
`;

exports[`dehydrate > dehydrate [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    7,
    10,
    13,
  ],
  [
    1,
    3,
    6,
  ],
  [
    0,
    4,
    5,
  ],
  "a",
  "b",
  [
    0,
    4,
    5,
  ],
  [
    1,
    8,
    9,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
  [
    1,
    11,
    12,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
  [
    1,
    14,
    15,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
]
`;

exports[`dehydrate > dehydrate [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    6,
    2,
    3,
    7,
  ],
  [
    1,
    3,
    3,
  ],
  [
    0,
    4,
    5,
  ],
  "a",
  "b",
  [
    1,
    3,
    7,
  ],
  [
    0,
    8,
    9,
  ],
  "c",
  "d",
]
`;

exports[`dehydrate > dehydrate [ {}, {}, {} ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    2,
  ],
  {},
]
`;

exports[`dehydrate > dehydrate [ 1, 2 ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    3,
  ],
  1,
  2,
]
`;

exports[`dehydrate > dehydrate [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    5,
    7,
    10,
    11,
    5,
  ],
  [
    1,
    0,
    3,
  ],
  [
    8,
    4,
  ],
  1,
  [
    1,
    0,
    6,
  ],
  "hello",
  [
    6,
    8,
    9,
  ],
  "\\w+",
  "g",
  {},
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    4,
    2,
    4,
    6,
    8,
    10,
    12,
  ],
  [
    8,
    3,
  ],
  1,
  [
    8,
    5,
  ],
  2,
  [
    8,
    7,
  ],
  9007199254740991,
  [
    8,
    9,
  ],
  -9007199254740991,
  [
    8,
    11,
  ],
  "9007199254740992",
  [
    8,
    14,
  ],
  "-",
  [
    2,
    13,
    11,
  ],
]
`;

exports[`dehydrate > dehydrate [ Array(3) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    3,
  ],
  [
    7,
    1704067200000,
  ],
  [
    7,
    1704153600000,
  ],
]
`;

exports[`dehydrate > dehydrate [] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate { a: [ 1 ] } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    0,
    6,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(11) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    16,
  ],
  [
    0,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
  ],
  "a",
  "b",
  "cValues",
  "m",
  "mm",
  "n",
  "nn",
  "nnn",
  "r",
  "rValues",
  "s",
  "ss",
  "values",
  [
    0,
    17,
    19,
    23,
    27,
    27,
    28,
    28,
    28,
    29,
    36,
    37,
    37,
    23,
  ],
  [
    1,
    18,
    18,
  ],
  [
    0,
    3,
    4,
  ],
  [
    1,
    18,
    20,
  ],
  [
    0,
    21,
    22,
  ],
  "c",
  "d",
  [
    0,
    24,
    25,
    26,
  ],
  "apple",
  "banana",
  "pineapple",
  [
    5,
    18,
    18,
  ],
  [
    0,
    17,
    19,
    17,
    18,
    20,
    29,
    32,
  ],
  [
    6,
    30,
    31,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
  [
    1,
    33,
    35,
  ],
  [
    0,
    11,
    34,
  ],
  "rr",
  [
    0,
    29,
    29,
  ],
  [
    0,
    26,
    25,
    24,
  ],
  [
    4,
    39,
  ],
  [
    1,
    18,
    18,
  ],
  [
    0,
    17,
    19,
    38,
    18,
    20,
    29,
    32,
  ],
]
`;

exports[`dehydrate > dehydrate { a: { a: 'a', b: 42 } } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    1,
    6,
    8,
  ],
  [
    0,
    3,
    7,
  ],
  "b",
  [
    0,
    3,
    9,
  ],
  42,
]
`;

exports[`dehydrate > dehydrate { a: { b: 1 } } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    1,
    6,
    8,
  ],
  [
    0,
    7,
  ],
  "b",
  [
    0,
    9,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { a: 1 } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    6,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "fruit",
  "joinFruit",
  "sentence",
  [
    0,
    7,
    13,
    14,
  ],
  [
    0,
    8,
    9,
    8,
    9,
    8,
    10,
  ],
  "apple",
  "banana",
  "pineapple",
  "-banana-apple-banana-apple-",
  [
    2,
    11,
    10,
  ],
  [
    2,
    8,
    12,
  ],
  "There is a bit of fruit on the table. Some banana, apple, and pineapple.",
]
`;

exports[`dehydrate > dehydrate { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    5,
  ],
  [
    0,
    3,
    4,
  ],
  "set",
  "values",
  [
    0,
    6,
    7,
  ],
  [
    4,
    7,
  ],
  [
    0,
    8,
    9,
    10,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate {} undefined 1`] = `
[
  "Flatpack JSON v1",
  {},
]
`;

exports[`dehydrate > dehydrate 1 undefined 1`] = `
[
  "Flatpack JSON v1",
  1,
]
`;

exports[`dehydrate > dehydrate 1.1 undefined 1`] = `
[
  "Flatpack JSON v1",
  1.1,
]
`;

exports[`dehydrate > dehydrate Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    5,
    2,
    6,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "apple",
  "banana",
  "pineapple",
  [
    0,
    7,
    8,
    9,
  ],
  1,
  2,
  3,
]
`;

exports[`dehydrate > dehydrate Set{ 'apple', 'banana', 'pineapple' } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    4,
    2,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate Set{ 'pineapple', 'apple', 'banana' } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    4,
    2,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "pineapple",
  "apple",
  "banana",
]
`;

exports[`dehydrate > dehydrate false undefined 1`] = `
[
  "Flatpack JSON v1",
  false,
]
`;

exports[`dehydrate > dehydrate null undefined 1`] = `
[
  "Flatpack JSON v1",
  null,
]
`;

exports[`dehydrate > dehydrate true undefined 1`] = `
[
  "Flatpack JSON v1",
  true,
]
`;

exports[`dehydrate > dehydrate undefined undefined 1`] = `
[
  "Flatpack JSON v1",
]
`;
